@@ -30,6 +30,21 @@
 #   endif
 #endif
 
+/* [Bug #803489] Tcl_FindNamespace problem in the Stubs table */
+#undef Tcl_AppendExportList
+#undef Tcl_CreateNamespace
+#undef Tcl_DeleteNamespace
+#undef Tcl_Export
+#undef Tcl_FindCommand
+#undef Tcl_FindNamespace
+#undef Tcl_FindNamespaceVar
+#undef Tcl_ForgetImport
+#undef Tcl_GetCommandFromObj
+#undef Tcl_GetCommandFullName
+#undef Tcl_GetCurrentNamespace
+#undef Tcl_GetGlobalNamespace
+#undef Tcl_Import
+
 /*
  * WARNING: This file is automatically generated by the tools/genStubs.tcl
  * script.  Any modifications to the function declarations below should be made
